# eiskaltdcpp-web

./: CMakeLists.txt  INSTALL  README.html  README.md  config.js  full.copyrights.info.in.Debian.style  get-js-dependecies.sh  index.html  style.css
js/: main.js
js/app/: eiskalt.search.js  eiskaltdcpp.debug.js  eiskaltdcpp.queue.js  eiskaltdcpp.search.js  eiskaltdcpp.status.js
js/lib/: jquery.hashchange.js
linux/: eiskaltdcpp-web  eiskaltdcpp-web.1  eiskaltdcpp-web.desktop
windows/: help.html  help.md
